force-app 2/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <description>Tracks post-sale delivery work and integrates with Rocketlane for project management</description>
    <label>Delivery</label>
    <nameField>
        <displayFormat>DEL-{0000}</displayFormat>
        <label>Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>