force-app 2/main/default/objects/Delivery__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <helpText>Auto-populated from Opportunity</helpText>
</CustomField>