force-app 2/main/default/objects/Delivery__c/fields/Actual_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_Live_Date__c</fullName>
    <label>Actual Go-Live Date</label>
    <type>Date</type>
    <helpText>When client went live in production</helpText>
</CustomField>