force-app 2/main/default/objects/Delivery__c/fields/Actual_JH_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_JH_Hours__c</fullName>
    <label>Actual JH Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <helpText>Actual hours logged (synced from Rocketlane timesheet data)</helpText>
</CustomField>