force-app 2/main/default/objects/Delivery__c/fields/Client_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Client_Sponsor__c</fullName>
    <label>Client Sponsor</label>
    <length>255</length>
    <type>Text</type>
    <helpText>Primary client stakeholder name and title</helpText>
</CustomField>