force-app 2/main/default/objects/Delivery__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <helpText>Total contract value from Opportunity (auto-populated)</helpText>
</CustomField>