force-app 2/main/default/objects/Delivery__c/fields/Data_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Data_Complexity__c</fullName>
    <label>Data Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <helpText>Complexity of client's legal data and systems</helpText>
</CustomField>