force-app 2/main/default/objects/Delivery__c/fields/Eudia_Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Eudia_Delivery_Owner__c</fullName>
    <label>Eudia Delivery Owner</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deliveries Owned</relationshipLabel>
    <relationshipName>Deliveries_Owned</relationshipName>
    <helpText>Primary Eudia contact responsible for delivery</helpText>
</CustomField>