force-app 2/main/default/objects/Delivery__c/fields/Expansion_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Opportunities__c</fullName>
    <label>Expansion Opportunities</label>
    <length>32000</length>
    <type>LongTextArea</type>
    <helpText>Notes on upsell/cross-sell opportunities identified during delivery</helpText>
</CustomField>