force-app 2/main/default/objects/Delivery__c/fields/JH_Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>JH_Delivery_Manager__c</fullName>
    <label>Johnson Hana Delivery Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>JH Deliveries Managed</relationshipLabel>
    <relationshipName>JH_Deliveries_Managed</relationshipName>
    <helpText>JH team lead for managed services component</helpText>
</CustomField>