force-app 2/main/default/objects/Delivery__c/fields/Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Date__c</fullName>
    <label>Kickoff Date</label>
    <type>Date</type>
    <helpText>Scheduled project kickoff date</helpText>
</CustomField>