force-app 2/main/default/objects/Delivery__c/fields/Last_Rocketlane_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Rocketlane_Sync__c</fullName>
    <label>Last Synced from Rocketlane</label>
    <type>DateTime</type>
    <helpText>Timestamp of last successful sync from Rocketlane</helpText>
</CustomField>