force-app 2/main/default/objects/Delivery__c/fields/Rocketlane_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>Rocketlane_Project_URL__c</fullName>
    <label>Rocketlane Project URL</label>
    <type>Url</type>
    <helpText>Direct link to Rocketlane project</helpText>
</CustomField>