force-app 2/main/default/objects/Delivery__c/fields/Rocketlane_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Rocketlane_Sync_Status__c</fullName>
    <defaultValue>Not Synced</defaultValue>
    <label>Rocketlane Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
            <value>
                <fullName>Sync Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>