force-app 2/main/default/objects/Delivery__c/fields/Services_Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Services_Revenue_Recognized__c</fullName>
    <label>Services Revenue Recognized</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <helpText>Revenue recognized to date (synced from Rocketlane or manual)</helpText>
</CustomField>