force-app 2/main/default/objects/Delivery__c/fields/Target_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Go_Live_Date__c</fullName>
    <label>Target Go-Live Date</label>
    <type>Date</type>
    <helpText>Planned production launch date</helpText>
</CustomField>