force-app 2/main/default/objects/Delivery__c/fields/Time_Savings_Percent__c.field-meta.xml
<CustomField>
    <fullName>Time_Savings_Percent__c</fullName>
    <label>Time Savings Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <helpText>Client time savings achieved vs baseline</helpText>
</CustomField>