force-app 2/main/default/objects/Delivery__c/fields/Utilization_Percent__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Percent__c</fullName>
    <formula>IF(Planned_JH_Hours__c &gt; 0, Actual_JH_Hours__c / Planned_JH_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>